sorted/tests/02-not-enum.stderr
error: expected enum or match expression
  --> $DIR/02-not-enum.rs:31:1
   |
31 | #[sorted]
   | ^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
